--- a/supabase-github-test.html
+++ b/supabase-github-test.html
@@ -151,7 +151,7 @@
                 const { data, error } = await supabaseClient.auth.signInWithOAuth({
                     provider: 'github',
                     options: {
-                        redirectTo: window.location.origin + window.location.pathname
+                        redirectTo: 'https://tlillie72.github.io/parliamo-auth-test/supabase-github-test.html'
                     }
                 });
 
